# qassist_to_card

./: .gitignore  README.md  pyproject.toml  qassis_to_card.ipynb  qassist_to_card.ipynb  requirements.txt  to_card.py
docs/: README.md  _config.yml  index.md
