[project]
name = "qassist_to_card"
version = "0.1.0"
description = ""
authors = [{ name = "Katsuma Inoue", email = "katsuma.inoue.42@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pymupdf>=1.24.2,<2",
    "ipykernel>=6.29.4,<7",
    "ipywidgets>=8.1.2,<9",
    "pandas>=2.2.2,<3",
    "tqdm>=4.66.4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
select = ["B", "E4", "E7", "E9", "F", "I"]

[tool.ruff.lint]
ignore = ["E402", "E501", "F401"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["B"]

[tool.ruff.format]
quote-style = "single"
